# memory_book

./: LICENSE
image_generator/: main.py  prompts.csv  pyproject.toml  requirements.txt
image_generator/utils/: generate_descriptions_from_images.py  image_generator.py
